--- a/app.html
+++ b/app.html
@@ -5,7 +5,8 @@
 <link rel="stylesheet" href="style.css" type="text/css" />
 </head>
 <body>
-<br>
+<br> 
+<h1>Hozir o'zgardi</h1>
 <div class="bgimg-1">
   <div class="caption">
   <span class="border">SCROLL DOWN</span>
